@@ -1,10 +1,13 @@
 package com.example.solidconnection.score.service;
 
+import static com.example.solidconnection.common.exception.ErrorCode.USER_NOT_FOUND;
+
 import com.example.solidconnection.application.domain.Gpa;
 import com.example.solidconnection.application.domain.LanguageTest;
-import com.example.solidconnection.custom.exception.CustomException;
-import com.example.solidconnection.s3.S3Service;
-import com.example.solidconnection.s3.UploadedFileUrlResponse;
+import com.example.solidconnection.common.exception.CustomException;
+import com.example.solidconnection.s3.domain.ImgType;
+import com.example.solidconnection.s3.dto.UploadedFileUrlResponse;
+import com.example.solidconnection.s3.service.S3Service;
 import com.example.solidconnection.score.domain.GpaScore;
 import com.example.solidconnection.score.domain.LanguageTestScore;
 import com.example.solidconnection.score.dto.GpaScoreRequest;
@@ -17,18 +20,12 @@ import com.example.solidconnection.score.repository.GpaScoreRepository;
 import com.example.solidconnection.score.repository.LanguageTestScoreRepository;
 import com.example.solidconnection.siteuser.domain.SiteUser;
 import com.example.solidconnection.siteuser.repository.SiteUserRepository;
-import com.example.solidconnection.type.ImgType;
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
-
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import static com.example.solidconnection.custom.exception.ErrorCode.USER_NOT_FOUND;
 
 @Service
 @RequiredArgsConstructor
@@ -40,63 +37,52 @@ public class ScoreService {
     private final SiteUserRepository siteUserRepository;
 
     @Transactional
-    public Long submitGpaScore(SiteUser siteUser, GpaScoreRequest gpaScoreRequest, MultipartFile file) {
+    public Long submitGpaScore(long siteUserId, GpaScoreRequest gpaScoreRequest, MultipartFile file) {
+        SiteUser siteUser = siteUserRepository.findById(siteUserId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
         UploadedFileUrlResponse uploadedFile = s3Service.uploadFile(file, ImgType.GPA);
         Gpa gpa = new Gpa(gpaScoreRequest.gpa(), gpaScoreRequest.gpaCriteria(), uploadedFile.fileUrl());
-
-        /*
-         * todo: siteUser를 영속 상태로 만들 수 있도록 컨트롤러에서 siteUserId 를 넘겨줄 것인지,
-         *  siteUser 에 gpaScoreList 를 FetchType.EAGER 로 설정할 것인지,
-         *  gpa 와 siteUser 사이의 양방향을 끊을 것인지 생각해봐야한다.
-         */
-        SiteUser siteUser1 = siteUserRepository.findById(siteUser.getId()).orElseThrow(() -> new CustomException(USER_NOT_FOUND));
-        GpaScore newGpaScore = new GpaScore(gpa, siteUser1);
-        newGpaScore.setSiteUser(siteUser1);
-        GpaScore savedNewGpaScore = gpaScoreRepository.save(newGpaScore);  // 저장 후 반환된 객체
-        return savedNewGpaScore.getId();  // 저장된 GPA Score의 ID 반환
+        GpaScore newGpaScore = new GpaScore(gpa, siteUser);
+        GpaScore savedNewGpaScore = gpaScoreRepository.save(newGpaScore);
+        return savedNewGpaScore.getId();
     }
 
     @Transactional
-    public Long submitLanguageTestScore(SiteUser siteUser, LanguageTestScoreRequest languageTestScoreRequest, MultipartFile file) {
+    public Long submitLanguageTestScore(long siteUserId, LanguageTestScoreRequest languageTestScoreRequest, MultipartFile file) {
+        SiteUser siteUser = siteUserRepository.findById(siteUserId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
         UploadedFileUrlResponse uploadedFile = s3Service.uploadFile(file, ImgType.LANGUAGE_TEST);
         LanguageTest languageTest = new LanguageTest(languageTestScoreRequest.languageTestType(),
-                languageTestScoreRequest.languageTestScore(), uploadedFile.fileUrl());
-
-        /*
-         * todo: siteUser를 영속 상태로 만들 수 있도록 컨트롤러에서 siteUserId 를 넘겨줄 것인지,
-         *  siteUser 에 languageTestScoreList 를 FetchType.EAGER 로 설정할 것인지,
-         *  languageTest 와 siteUser 사이의 양방향을 끊을 것인지 생각해봐야한다.
-         */
-        SiteUser siteUser1 = siteUserRepository.findById(siteUser.getId()).orElseThrow(() -> new CustomException(USER_NOT_FOUND));
-        LanguageTestScore newScore = new LanguageTestScore(languageTest, siteUser1);
-        newScore.setSiteUser(siteUser1);
-        LanguageTestScore savedNewScore = languageTestScoreRepository.save(newScore);  // 새로 저장한 객체
-        return savedNewScore.getId();  // 저장된 객체의 ID 반환
+                                                     languageTestScoreRequest.languageTestScore(), uploadedFile.fileUrl());
+        LanguageTestScore newScore = new LanguageTestScore(languageTest, siteUser);
+        LanguageTestScore savedNewScore = languageTestScoreRepository.save(newScore);
+        return savedNewScore.getId();
     }
 
     @Transactional(readOnly = true)
-    public GpaScoreStatusesResponse getGpaScoreStatus(SiteUser siteUser) {
-        // todo: ditto
-        SiteUser siteUser1 = siteUserRepository.findById(siteUser.getId()).orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+    public GpaScoreStatusesResponse getGpaScoreStatus(long siteUserId) {
+        SiteUser siteUser = siteUserRepository.findById(siteUserId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
         List<GpaScoreStatusResponse> gpaScoreStatusResponseList =
-                Optional.ofNullable(siteUser1.getGpaScoreList())
-                        .map(scores -> scores.stream()
-                                .map(GpaScoreStatusResponse::from)
-                                .collect(Collectors.toList()))
-                        .orElse(Collections.emptyList());
+                gpaScoreRepository.findBySiteUserId(siteUser.getId())
+                        .stream()
+                        .map(GpaScoreStatusResponse::from)
+                        .toList();
+
         return GpaScoreStatusesResponse.from(gpaScoreStatusResponseList);
     }
 
     @Transactional(readOnly = true)
-    public LanguageTestScoreStatusesResponse getLanguageTestScoreStatus(SiteUser siteUser) {
-        // todo: ditto
-        SiteUser siteUser1 = siteUserRepository.findById(siteUser.getId()).orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+    public LanguageTestScoreStatusesResponse getLanguageTestScoreStatus(long siteUserId) {
+        SiteUser siteUser = siteUserRepository.findById(siteUserId)
+                .orElseThrow(() -> new CustomException(USER_NOT_FOUND));
+        List<LanguageTestScore> languageTestScores = languageTestScoreRepository.findBySiteUserId(siteUser.getId());
+
         List<LanguageTestScoreStatusResponse> languageTestScoreStatusResponseList =
-                Optional.ofNullable(siteUser1.getLanguageTestScoreList())
-                        .map(scores -> scores.stream()
-                                .map(LanguageTestScoreStatusResponse::from)
-                                .collect(Collectors.toList()))
-                        .orElse(Collections.emptyList());
+                languageTestScores.stream()
+                        .map(LanguageTestScoreStatusResponse::from)
+                        .collect(Collectors.toList());
+
         return LanguageTestScoreStatusesResponse.from(languageTestScoreStatusResponseList);
     }
 }
